<resources>
    <!-- Sign In Page (User and Admin) -->
    <string name="app_name">PutraEVENT</string>
    <string name="sign_in_text">Sign In</string>
    <string name="loginEmail_hint">UPM Email</string>
    <string name="password_hint">Password</string>
    <string name="submit_btn">Log In</string>
    <string name="forgot_txt">Forgot Password?</string>
    <string name="signup_txt">Sign Up</string>

    <!-- Home Page (User and Admin) -->
    <string name="home_text">Home</string>

    <!-- Forget Password Page -->
    <string name="forgetPass">Forgot Password</string>
    <string name="emailEntermsg">Enter UPM email</string>
    <string name="recPasswd">Recover Password</string>


    <!-- Sign Up / Registration (User) -->
    <string name="SignUp_title">Sign Up</string>
    <string name="field_firstname">Enter First Name</string>
    <string name="field_lastname">Enter Last Name</string>
    <string name="field_username">Enter Username</string>
    <string name="field_email">Enter UPM email</string>
    <string name="field_matric">Enter Matric No.</string>
    <string name="field_phone">Enter Phone No.</string>
    <string name="field_pass">Enter Password</string>
    <string name="field_confirmpass">Confirm Password</string>

    <string name="field_yearStudyDesc">Select Year of Study</string>
    <string-array name="year_study_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>Staff</item>
    </string-array>

    <string name="field_facultyDesc">Select Faculty</string>
    <string-array name="faculty_options">
        <item>Faculty of Engineering</item>
        <item>Faculty of Design and Architecture</item>
    </string-array>

    <string name="field_course">Select Course Name</string>

    <string name="faculty_fk">Faculty of Engineering</string>
    <string-array name="FK_options">
        <item>B.Eng in Civil Engineering</item>
        <item>B.Eng in Electrical and Electronics Engineering</item>
        <item>B.Eng in Chemical Engineering</item>
        <item>B.Eng in Agricultural and Biosystem Engineering</item>
        <item>B.Eng in Mechanical Engineering</item>
        <item>B.Eng in Engineering in Aerospace Engineering</item>
        <item>B.Eng in Process and Food Engineering</item>
        <item>B.Eng in Computer and Communication System Engineering</item>
    </string-array>


    <string name="faculty_frsb">Faculty of Design and Architecture</string>
    <string-array name="FRSB_options">
        <item>Bachelor of Landscape Architecture</item>
        <item>Bachelor of Science in Architecture</item>
        <item>Bachelor of Design (Industrial Design)</item>
    </string-array>


    <!-- Create Event (Admin) -->
    <string name="createevent_text">Create Event</string>
    <string name="token">Token</string>
    <string name="field_eventTitle">Enter Event Title</string>
    <string name="field_eventDesc">Enter Event Description</string>
    <string name="select_date_of_event">Select Date of Event</string>
    <string name="select_startTime_event">Select Event Start Time</string>
    <string name="submit_btn_createEVT">Submit</string>
    <string name="select_endTime_event">Select Event End Time</string>

    <string name="field_venue">Select Event Venue</string>
    <string-array name="venue_options">
        <item>Thinker Space 2.0</item>
        <item>MKKK7</item>
        <item>MKKK2</item>
        <item>BKSKK</item>
        <item>BK5 (KEJ)</item>
        <item>BK4 (KEJ)</item>
        <item>BK3 (KEJ)</item>
        <item>BT3 (KEJ)</item>
        <item>BT4 (KEJ)</item>
        <item>BT5 (KEJ)</item>
        <item>Bilik Seminar (KEJ)</item>
        <item>Bilik Auditorium (KEJ)</item>
        <item>WiPNeT (Tower Block)</item>
        <item>MSKK MCE (Tower Block)</item>
    </string-array>

    <string name="field_totalseats">Enter Total Number of Seats</string>
    <string name="field_organiser">Enter Event Organiser</string>
    <string name="field_speaker">Enter Speaker Name</string>
    <string name="field_eventPosterImg">Insert Event Poster as Image</string>
    <string name="field_checkAdmin">Admin</string>

    <!-- Register event (Admin and Attendee) -->
    <string name="eventRegsText_title">Event Registration</string>
    <string name="event_poster_contentDesc">Event Poster</string>

</resources>