<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/sign_in_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:background="#e0e0e0"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20sp"
        android:hint="@string/username_hint"
        android:padding="15sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:background="#e0e0e0"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawablePadding="20sp"
        android:hint="@string/password_hint"
        android:padding="15sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20sp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="20sp"
        android:backgroundTint="@color/cardview_dark_background"
        android:text="@string/submit_btn"
        android:onClick="saveInfo"/>

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/submit_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/forgot_txt"
        android:textColor="@color/cardview_dark_background" />


</RelativeLayout>