<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".userRegister">

    <!-- this image will stay in all of the pages, so copy this onto all the following pages -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cornerLogo"
                android:layout_width="41dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginStart="0dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                app:srcCompat="@drawable/clear_icon" />


            <TextView
                android:id="@+id/signUp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/SignUp_title"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signUp_title"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10sp"
                android:hint="@string/field_firstname"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="text"/>

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstname"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/field_lastname"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="text"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastname"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10sp"
                android:hint="@string/field_username"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="text"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/yearStudy"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/field_phone"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="number"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastname"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/field_email"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/matric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/field_matric"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="number"/>

            <EditText
                android:id="@+id/enterpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/matric"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:drawablePadding="10dp"
                android:hint="@string/field_pass"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/confirmpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enterpass"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:drawablePadding="10dp"
                android:hint="@string/field_confirmpass"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/yearStudy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirmpass"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/field_year"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="number"/>

            <EditText
                android:id="@+id/faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/yearStudy"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/field_faculty"
                android:inputType="number"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op" />

            <EditText
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/faculty"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="10dp"
                android:background="@color/grey_trans"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:hint="@string/field_course"
                android:padding="12sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_op"
                android:inputType="number"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30sp"
                android:layout_gravity="end"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/pink_dark"
                android:text="@string/submit_btn"
                android:textSize="17sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>